--- a/_post/2023-01-17.md
+++ b/_post/2023-01-17.md
@@ -7,4 +7,5 @@ title:  "첫 게시물"
 
 **시작**, 첫 글.
 
-어떻게 하면 마크다운 문법을 빨리 익힐까?? 
+fork 해온 것에서 commit을 하면 contribution이 적용안됨.
+고로 fork 대신 모든 파일을 가지고 새로 레포를 만듬.
