--- a/_posts/2023-01-17.md
+++ b/_posts/2023-01-17.md
@@ -1,11 +1,10 @@
 ---
 layout: post
-title:  "첫 게시물"
+title:  "Welcome to Jekyll!"
 ---
 
-# 첫 글
+# Welcome
 
-**시작**, 첫 글.
+**Hello world**, this is my first Jekyll blog post.
 
-fork 해온 것에서 commit을 하면 contribution이 적용안됨.
-고로 fork 대신 모든 파일을 가지고 새로 레포를 만듬.
+I hope you like it!
