--- a/_posts/2023-01-24-test.md
+++ b/_posts/2023-01-24-test.md
@@ -1,10 +1,10 @@
 ---
 layout: single
-title:  "Welcome to Jekyll!"
+title:  "첫 포스팅!"
 ---
 
 # Welcome
 
-**Hello world**, this is my first Jekyll blog post.
+**안녕**, 내 첫 포스팅
 
-I hope you like it!
+앞으로 많은 발전이 있길.
