--- a/_posts/2023-01-28-matlab.md
+++ b/_posts/2023-01-28-matlab.md
@@ -279,5 +279,4 @@ on matlab 2021a version
 case 같은 경우에는 여러 학기의 합주느낌을 주기위해 음과 박자를 지정해주어서 5가지 경우를 두었다.
 
 ##### 결과물
-깃허브 레포링크: <https://github.com/MoonJaehyun/make-music-on-matlab>
-깃허브 레포에서 확인해주세요!
+결과물 링크: <https://github.com/MoonJaehyun/make-music-on-matlab/blob/main/DreamyPatissiel.wav>
