--- a/_posts/2023-01-28-matlab.md
+++ b/_posts/2023-01-28-matlab.md
@@ -1,4 +1,3 @@
-
 ---
 layout: single
 title:  "maiking music on matlab"
@@ -279,4 +278,4 @@ on matlab 2021a version
 case 같은 경우에는 여러 학기의 합주느낌을 주기위해 음과 박자를 지정해주어서 5가지 경우를 두었다.
 
 ##### 결과물
-결과물 링크: <https://github.com/MoonJaehyun/make-music-on-matlab/blob/main/DreamyPatissiel.wav>
+결과물 레포링크: <https://github.com/MoonJaehyun/make-music-on-matlab>
