--- a/_posts/2023-01-28-matlab.md
+++ b/_posts/2023-01-28-matlab.md
@@ -4,12 +4,10 @@ title:  "maiking music on matlab"
 ---
 
 
-매트랩에서 노래 만들기.
-=====================
+# 매트랩에서 노래 만들기.
 on matlab 2021a version
----------------
 
-깃허브 레포링크: <https://github.com/MoonJaehyun/make-music-on-matlab>
+##### 깃허브 레포링크: <https://github.com/MoonJaehyun/make-music-on-matlab>
 
 학교에서 음성신호처리를 배우다가 하게된 과제로 매트랩으로 노래만들기를 하게 되었다.
 
