--- a/_posts/2023-01-28-matlab.md
+++ b/_posts/2023-01-28-matlab.md
@@ -1,6 +1,6 @@
 ---
 layout: single
-title:  "maiking music on matlab"
+title:  "making music on matlab"
 toc : true
 toc_sticky: true
 category: assignment
